objects/ssot__HealthcarePerformer__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AffiliatedOrganizationId__c</fullName>
        <label>Affiliated Organization</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Healthcare Performer Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicalSpecialty__c</fullName>
        <label>Medical Specialty</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerformerId__c</fullName>
        <label>Performer</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerformerObject__c</fullName>
        <label>Performer Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RoleId__c</fullName>
        <label>Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceServiceReferenceId__c</fullName>
        <label>Source Service Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceServiceReferenceObject__c</fullName>
        <label>Source Service Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDate__c</fullName>
        <label>Source System Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystem__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725807959_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcarePerformer_PerformerId_map__rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>HealthcarePerformer_PerformerId_map__rel</relationshipLabel>
        <relationshipName>rel_1716725807959_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725813703_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcarePerformer_SourceServiceRef_rel</label>
        <referenceTo>ssot__PatientImmunization__dlm</referenceTo>
        <relationshipLabel>HealthcarePerformer_SourceServiceRef_rel</relationshipLabel>
        <relationshipName>rel_1716725813703_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725814935_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcarePerformer_SourceServiceRef_rel</label>
        <referenceTo>ssot__PatientMedicalProcedure__dlm</referenceTo>
        <relationshipLabel>HealthcarePerformer_SourceServiceRef_rel</relationshipLabel>
        <relationshipName>rel_1716725814935_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>